# ShadowCatcher

./: .git_history_log  .gitattributes  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: build_android.yml  build_linux.yml  build_release.yml  build_windows.yml
ai_training/: evaluate.py  export_onnx.py  requirements.txt  train.py  verify_onnx.py
ai_training/src/: __init__.py
ai_training/src/data/: __init__.py  augmentor.py  extractor.py  loader.py  validator.py
ai_training/src/models/: __init__.py  classifier.py  cnn_model.py  mlp_model.py
ai_training/src/utils/: __init__.py  logger.py  metrics.py  visualizer.py
ai_training/tests/: __init__.py  test_classifier.py  test_extractor.py  test_onnx_output.py
frontend/: README.md  pubspec.yaml
frontend/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  launch_background.xml
frontend/android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
frontend/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
frontend/linux/: CMakeLists.txt
frontend/linux/flutter/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/test/: widget_test.dart
frontend/windows/flutter/ephemeral/.plugin_symlinks/: jni  path_provider_windows  shared_preferences_windows
native_core/: Cargo.toml  build.rs
native_core/benches/: bench_stream_cleaner.rs  bench_throughput.rs  bench_triage.rs
native_core/src/: api.rs  lib.rs
native_core/src/models/: download_task.rs  mod.rs  scan_result.rs  threat_report.rs
native_core/src/network/: connection_pool.rs  downloader.rs  mod.rs  resume_handler.rs
native_core/src/stream/: ffmpeg_bridge.rs  mod.rs  output_writer.rs  packet_filter.rs  stream_cleaner.rs
native_core/src/throttler/: mod.rs  ram_monitor.rs  tcp_controller.rs  throttler.rs
native_core/src/triage/: extension_checker.rs  header_parser.rs  magic_bytes.rs  mod.rs
native_core/src/utils/: config.rs  error.rs  logger.rs  mod.rs
native_core/tests/integration/: test_stream_cleaner.rs  test_throttler.rs  test_triage_pipeline.rs
native_core/tests/unit/: test_magic_bytes.rs  test_packet_filter.rs  test_ram_monitor.rs
